--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,11 @@ language: php
 php:
   - 5.5
 env:
-  - TEST_SUITE=static_phpcs
-  - TEST_SUITE=static_annotation
+ - TEST_SUITE=unit
+ - TEST_SUITE=integration
+ - TEST_SUITE=integration_integrity
+ - TEST_SUITE=static_phpcs
+ - TEST_SUITE=static_annotation
 before_install:
   - sudo apt-get update -qq
   - sudo apt-get install -y -qq postfix
